manifests/common/logging.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: logging
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: logging
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-ssl-redirect@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - path: /monitor
            pathType: Prefix
            backend:
              service:
                name: loki-grafana
                port:
                  number: 80
